# cosyne_vm

./: .gitignore  README.md  __init__.py  crd_connect.py  database.py  environment.yml  logging_utils.py  pyproject.toml  requirements.txt  update_inuse_status.py
.github/workflows/: build-and-publish-manual.yml  build-and-test-pip.yml  publish-pip.yml
lablink_client/: crd_connect.py  database.py  logging_utils.py  subscribe_instance.py  update_inuse_status.py
terraform/: main.tf  providers.tf  variables.tf
tests/: test_crd_connect.py  test_database.py  test_imports.py
tutorial_vm/: crd_connect.py  database.py  subscribe_instance.py  update_inuse_status.py
tutorial_vm/.github/workflows/: build-and-test-pip.yml
